# Lima-camera-spectralinstrument

./: CMakeLists.txt  README.md  pom_64.xml
doc/: index.rst  netpacket.rst
include/: CameraAcqThread.h  CameraControl.h  CameraControlInit.h  CameraReceiveDataThread.h  CameraSingleton.h  CameraSingleton.hpp  CameraUpdateDataThread.h  NetPackets.h  NetPacketsGroups.h  ProtectedList.h  ProtectedList.hpp  SpectralBinCtrlObj.h  SpectralCamera.h  SpectralDetInfoCtrlObj.h  SpectralInstrumentBinCtrlObj.h  SpectralInstrumentCamera.h  SpectralInstrumentCompatibility.h  SpectralInstrumentDetInfoCtrlObj.h  SpectralInstrumentInterface.h  SpectralInstrumentRoiCtrlObj.h  SpectralInstrumentSyncCtrlObj.h  SpectralInterface.h  SpectralRoiCtrlObj.h  SpectralSyncCtrlObj.h
include/si-ans/: NetAcknowledge.hpp  NetAnswerConfigurePackets.hpp  NetAnswerGenericString.hpp  NetAnswerGetCameraParameters.hpp  NetAnswerGetStatus.hpp  NetAnswerSetAcquisitionMode.hpp  NetAnswerSetCoolingValue.hpp  NetAnswerSetSingleParameter.hpp  NetAnswerTerminateImageRetrieve.hpp  NetImage.hpp
include/si-cam/: SpectralInstrumentCameraInterface.hpp  (+1 more)
src/: CameraAcqThread.cpp  CameraControl.cpp  CameraControlInit.cpp  CameraReceiveDataThread.cpp  CameraUpdateDataThread.cpp  NetAcknowledge.hpp  NetAnswerAcquire.hpp  NetAnswerAcquisitionStatus.hpp  NetAnswerCommandDone.hpp  NetAnswerGenericString.hpp  NetAnswerGetCameraParameters.hpp  NetAnswerGetSettings.hpp  NetAnswerGetStatus.hpp  NetAnswerSetAcquisitionType.hpp  NetAnswerSetExposureTime.hpp  NetAnswerSetFormatParameters.hpp  NetAnswerSetReadoutSpeedValue.hpp  NetAnswerTerminateAcquisition.hpp  NetCommandConfigurePackets.hpp  NetCommandGetCameraParameters.hpp  NetCommandHeader.hpp  NetCommandInquireAcquisitionStatus.hpp  NetCommandRetrieveImage.hpp  NetCommandSetAcquisitionMode.hpp  NetCommandSetAcquisitionType.hpp  NetCommandSetFormatParameters.hpp  NetCommandSetReadoutSpeedValue.hpp  NetCommandSetSingleParameter.hpp  NetGenericAnswer.hpp  NetGenericHeader.hpp  NetImage.hpp  NetImageHeader.hpp  NetPackets.cpp  NetPacketsGroups.cpp  SpectralBinCtrlObj.cpp  SpectralCamera.cpp  SpectralCameraBin.hpp  SpectralCameraDetInfo.hpp  SpectralCameraInterface.hpp  SpectralCameraRoi.hpp  (+11 more)
(+7 files in other folders)
